--- a/src/app/conta_usuario/avals/avals.component.html
+++ b/src/app/conta_usuario/avals/avals.component.html
@@ -3,7 +3,7 @@
 </div>
 
 <div class="avi" *ngIf="itens.length === 0">
-    Você ainda fez nenhuma avaliação
+    Você ainda não fez nenhuma avaliação
 </div>
 
 <div class="col-sm-12 item" *ngFor="let item of itens">
