--- a/src/app/conta_usuario/orders-user/order-details/order-details.component.html
+++ b/src/app/conta_usuario/orders-user/order-details/order-details.component.html
@@ -30,32 +30,40 @@
                 <!--itens-->
                 <div class="col-sm-12">
                     <div class="col-sm-12 itens" *ngFor="let item of data.itens">
-                        <div style="font-weight: 600;"> {{ item.qnt }}x {{ item.nome }} </div>
-                        <div *ngFor="let adc of item.adicionais" style="    color: rgb(78, 78, 78);
+                        <div style="font-weight: 600; display: flex; justify-content: space-between;">
+                            <div>{{ item.qnt }}x {{ item.nome }}</div>
+                            <div>{{ item.preco | currency:'BRL':true }}</div>
+                        </div>
+                        <div *ngFor="let adc of item.adicionais" style="color: rgb(78, 78, 78);
                         display: flex;
-                        justify-content: space-between;">
+                        justify-content: space-between;    border-top: 1px solid #d6d6d6;">
                             <div> {{ adc.qnt }}x {{ adc.nome }} </div>
 
-                            <div> {{ item.total | currency:'BRL':true }} </div>
+                            <div> {{ adc.preco | currency:'BRL':true }} </div>
                         </div>
-                        <!--itens-->
-                        <div class="col-sm-12 pay xc mp0L mp0R">
-                            <div>Subtotal</div>
-                            <div> {{ data.subtotal | currency:'BRL':true }} </div>
-                        </div>
-                        <div class="col-sm-12 pay xc mp0L mp0R">
-                            <div>Descontos</div>
-                            <div> {{ data.desconto | currency:'BRL':true }} </div>
-                        </div>
-                        <div class="col-sm-12 pay xc mp0L mp0R">
-                            <div>Entrega</div>
-                            <div> {{ data.taxaentrega | currency:'BRL':true }} </div>
-                        </div>
-                        <div class="col-sm-12 pay it xc mp0L mp0R">
-                            <div> Total </div>
-                            <div> {{ data.total | currency:'BRL':true }} </div>
+                        <div style="font-weight: 600; display: flex; justify-content: space-between;">
+                            <div>Total</div>
+                            <div>{{ item.total | currency:'BRL':true }}</div>
                         </div>
                     </div>
-                    <!--nota-->
+                    <!--itens-->
+                    <div class="col-sm-12 pay xc mp0L mp0R">
+                        <div>Subtotal</div>
+                        <div> {{ data.subtotal | currency:'BRL':true }} </div>
+                    </div>
+                    <div class="col-sm-12 pay xc mp0L mp0R">
+                        <div>Descontos</div>
+                        <div> {{ data.desconto | currency:'BRL':true }} </div>
+                    </div>
+                    <div class="col-sm-12 pay xc mp0L mp0R">
+                        <div>Entrega</div>
+                        <div> {{ data.taxaentrega | currency:'BRL':true }} </div>
+                    </div>
+                    <div class="col-sm-12 pay it xc mp0L mp0R">
+                        <div> Total </div>
+                        <div> {{ data.total | currency:'BRL':true }} </div>
+                    </div>
                 </div>
+                <!--nota-->
             </div>
+        </div>
