--- a/src/app/inicio/itens-merchant/itens-merchant.component.html
+++ b/src/app/inicio/itens-merchant/itens-merchant.component.html
@@ -33,7 +33,7 @@
         </div>
 
 
-        <div class="c4 col-sm-12 mp0L" style="margin-bottom: 10px;">
+        <!--<div class="c4 col-sm-12 mp0L" style="margin-bottom: 10px;">
 
             <div class="example-action-buttons">
             </div>
@@ -58,7 +58,7 @@
 
             </mat-accordion>
 
-        </div>
+        </div>-->
         <!--Filtros-->
         <div class="col-sm-12">
             <div class="row">
