--- a/src/app/inicio/login/login.component.html
+++ b/src/app/inicio/login/login.component.html
@@ -7,12 +7,12 @@
 <div [formGroup]="form" style="margin-top: 25px;">
     <mat-form-field>
         <mat-label>Telefone</mat-label>
-        <input matInput formControlName="email" type="tel" mask="(00)00000-0000">
+        <input matInput formControlName="email" type="tel" mask="(00)00000-0000" (keydown.enter)="entrar()">
     </mat-form-field>
 
     <mat-form-field>
         <mat-label> Senha </mat-label>
-        <input matInput type="password" formControlName="senha">
+        <input matInput type="password" formControlName="senha" (keydown.enter)="entrar()">
     </mat-form-field>
 </div>
 
