--- a/src/app/payment-steps/addfp/addfp.component.html
+++ b/src/app/payment-steps/addfp/addfp.component.html
@@ -21,12 +21,12 @@
             <div style="margin-top: 5px;">
                 <mat-form-field class="inputfp" [formGroup]="form">
                     <mat-label> Valor a pagar </mat-label>
-                    <input matInput placeholder="R$0,00" type="tel" formControlName="valor" mask="separator.2" thousandSeparator="." autocomplete="off">
+                    <input matInput placeholder="R$0,00" type="tel" formControlName="valor" mask="separator.2" thousandSeparator="." autocomplete="off" (keydown.enter)="onClickConfirm(data)">
                 </mat-form-field>
 
                 <mat-form-field class="inputfp" [formGroup]="form" style="margin-top:5px;" *ngIf="data.nome === 'Dinheiro'">
                     <mat-label> Troco para </mat-label>
-                    <input matInput placeholder="R$0,00" type="tel" formControlName="troco" mask="separator.2" thousandSeparator="." autocomplete="off">
+                    <input matInput placeholder="R$0,00" type="tel" formControlName="troco" mask="separator.2" thousandSeparator="." autocomplete="off" (keydown.enter)="onClickConfirm(data)">
                 </mat-form-field>
             </div>
             <div class="a-itens-pay" *ngFor="let item of data.itens">
