--- a/src/app/inicio/itens-merchant/itens-merchant.component.html
+++ b/src/app/inicio/itens-merchant/itens-merchant.component.html
@@ -28,9 +28,9 @@
             {{ service.getDadosEmpresa().descricao }}
         </div>
 
-        <div class="c3 col-sm-12 mp0L dad">
+        <!--<div class="c3 col-sm-12 mp0L dad">
             {{ service.getDadosEmpresa().seguimento }} • {{ service.getDadosEmpresa().tempoentrega }}
-        </div>
+        </div>-->
 
 
         <!--<div class="c4 col-sm-12 mp0L" style="margin-bottom: 10px;">
@@ -59,14 +59,20 @@
             </mat-accordion>
 
         </div>-->
+
+
+        <div class="caixa-cats-catalogo">
+            <div [class.itemSele]="item.selecionado" class="caixa-cats-catalogo-item" *ngFor="let item of service.getDadosEmpresa().categorias" (click)="clickMenuCat(item)"> {{ item.nome }} </div>
+        </div>
+
         <!--Filtros-->
-        <div class="col-sm-12">
+        <div class="col-sm-12 cata">
             <div class="row">
                 <div class="col-sm-12 row picks">
                     <div class="col-sm-6">
-                        <mat-form-field style="width:100%; margin-top: 4px;">
+                        <mat-form-field [formGroup]="catalogoFilter" style="width:100%; margin-top: 4px;">
                             <mat-label>Filtrar catálogo</mat-label>
-                            <mat-select #catalogoFilter>
+                            <mat-select formControlName="filtro">
                                 <mat-option value="">
                                     Sem filtro
                                 </mat-option>
@@ -99,7 +105,7 @@
 
     <!--Produtos para descktop-->
     <div class="row mp0R bMobile hiddenEl">
-        <div class="col-sm-12 mp0R" *ngFor="let item of service.getDadosEmpresa().categorias | name:catalogoFilter.value">
+        <div class="col-sm-12 mp0R" *ngFor="let item of service.getDadosEmpresa().categorias | name:catalogoFilter.value.filtro">
             <div class="aicn col-sm-12"> {{ item.nome }} </div>
             <div class="row mp0R">
                 <div style="padding: 10px;" class="col-sm-6 " *ngFor="let product of item.itens | filterId:filterProduct.value">
@@ -109,7 +115,7 @@
 
 
                                 <div class="col-sm-7">
-                                    <div class="item-01"> {{ product.nome | slice:0:26}} </div>
+                                    <div class="item-01"> {{ product.nome | slice:0:40}} </div>
                                     <div class="item-02"> {{ product.descricao }} </div>
                                     <div class="item-03">
                                         <div> {{ product.preco | currency:'BRL':true }}</div>
@@ -141,7 +147,7 @@
     </div>
 
     <!--produtos para mobile-->
-    <div *ngFor="let item of service.getDadosEmpresa().categorias | name:catalogoFilter.value" class="elementMobileShow">
+    <div *ngFor="let item of service.getDadosEmpresa().categorias | name:catalogoFilter.value.filtro" class="elementMobileShow">
         <div class="stycatItem"> {{ item.nome }} </div>
 
         <div class="itemProduct" *ngFor="let product of item.itens | filterId:filterProduct.value" (click)="openItem(product)">
