site para mob com barra de catalogo fixa

--- a/src/app/components/window-loader/window-loader.component.html
+++ b/src/app/components/window-loader/window-loader.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="status" style="     background-color: #673ab7f2;
+<div *ngIf="status" style="     background-color: #3F51B5;
 height: 100vh;
 width: 100%;
 position: absolute;
@@ -9,15 +9,7 @@ align-items: center;
 align-content: center;
 text-align: center;">
 
-    <div style="    width: 10%;
-    margin: auto;
-    padding: 10px;
-    background: #ffffff;
-    border-radius: 51px;
-    color: #ffc107;">
-        <mat-progress-bar mode="buffer"></mat-progress-bar>
-        <mat-icon class="mat-18">gesture</mat-icon>
-        <mat-progress-bar mode="buffer"></mat-progress-bar>
+    <div class="divv">
     </div>
 
 
