--- a/src/app/inicio/item-details/item-details.component.html
+++ b/src/app/inicio/item-details/item-details.component.html
@@ -7,11 +7,18 @@
 
 
     <div class="row mp0R mp0L carcara" *ngIf="statusLoader">
-
+        <!--img mobile-->
         <div class="col-sm-6 mp0R mp0L hiddenEl">
-            <div style="background-color: rgb(244, 236, 236)(244, 236, 236);" [lazyLoad]="itemCatalogo.imagem" class="img-item">
+            <div style="background-color: rgb(244, 236, 236);" [lazyLoad]="itemCatalogo.imagem" class="img-item">
             </div>
             <div [lazyLoad]="itemCatalogo.imagem" class="img-item-prod"></div>
+            <div style="width: 100%; margin-bottom: 20px;">
+                <carousel [height]="100" *ngIf="itemCatalogo.categoria_nome.length > 0">
+                    <div class="carousel-cell" *ngFor="let item of itemCatalogo.categoria_nome">
+                        <img (click)="clickSubIMG(item)" [src]="item.imagem">
+                    </div>
+                </carousel>
+            </div>
         </div>
 
         <div class="col-sm-12 mp0R mp0L btCloseMobile" style="text-align: end;">
@@ -23,6 +30,13 @@
         <!--img mobile-->
         <div class="col-sm-6 mp0R mp0L img-prod-mobile">
             <div [lazyLoad]="itemCatalogo.imagem" class="img-item-prod"></div>
+            <div style="width: 100%; margin-bottom: 20px;">
+                <carousel [height]="100" *ngIf="itemCatalogo.categoria_nome.length > 0" style="z-index: 1;">
+                    <div class="carousel-cell" *ngFor="let item of itemCatalogo.categoria_nome">
+                        <img (click)="clickSubIMG(item)" [lazyLoad]="item.imagem">
+                    </div>
+                </carousel>
+            </div>
         </div>
         <!--img mobile-->
 
