Sistema de recuperar conta

--- a/src/app/inicio/item-details/item-details.component.html
+++ b/src/app/inicio/item-details/item-details.component.html
@@ -9,7 +9,7 @@
     <div class="row mp0R mp0L carcara" *ngIf="statusLoader">
         <!--img mobile-->
         <div class="col-sm-6 mp0R mp0L hiddenEl">
-            <div style="background-color: rgb(244, 236, 236);" [lazyLoad]="itemCatalogo.imagem" class="img-item">
+            <div class="img-item">
             </div>
             <div [lazyLoad]="itemCatalogo.imagem" class="img-item-prod"></div>
             <div style="width: 100%; margin-bottom: 20px;">
