--- a/src/app/inicio/login/login.component.css
+++ b/src/app/inicio/login/login.component.css
@@ -10,6 +10,19 @@ mat-form-field {
     width: 100%;
 }
 
+.lbin {
+    font-size: 11px;
+    margin-top: 40px;
+}
+
+.inopd {
+    background: #f3f3f3;
+    margin-bottom: 11px;
+    border: 1px solid #e7dede;
+    padding: 10px;
+    border-radius: 7px;
+}
+
 .ia {
     text-align: center;
     width: 70px;
