Iniciando Sistema mUlt lojas

--- a/src/app/inicio/home/home.component.html
+++ b/src/app/inicio/home/home.component.html
@@ -1,44 +1,34 @@
-<div class="col-sm-12 bMobile">
-    <div class="row">
+<div class="a">
+    <div class="b">
+        <button mat-button>Vulto Empresas</button>
+        <button mat-stroked-button style="color: white;">Entrar</button>
+    </div>
+
+    <div class="c">
+        <div class="logo">
+            <img style="width: 183px;" src="./assets/images/others/logo.png" alt="" srcset="">
+        </div>
+        <div class="d">
+            Nunca foi tão fácil pedir comida saudável
+        </div>
+        <div class="e">Descubra restaurantes e mercados perto de você</div>
 
 
-        <div class="c col-sm-5">
-
-            <div class="col-sm-12">
-                <img class="logo" src="../../../assets/images/others/logo.png" alt="" srcset="">
-            </div>
-
-            <div class="col-sm-12">
-                <h1>Seja bem vindo!</h1>
-            </div>
-
-            <div class="bo col-sm-12">
-
-                <div class="col-sm-12" style="margin-top: 50px;">
-                    <a href="javascript:;" class="yu">
-                        <div class="botao-delsuc" (click)="selecionarEndereco()"> Selecionar endereço </div>
-                    </a>
+        <div class="f">
+            <div class="g">
+                <div class="input" (click)="seleionarEndereco()">
+                    <mat-icon>search</mat-icon>
+                    Buscar endereço
+                </div>
+                <div class="btSearh" (click)="seleionarEndereco()">
+                    Buscar
                 </div>
 
-
-
             </div>
-
         </div>
 
-
-        <div class="c2 col-sm-7">
-            <div class="guin col-sm-12">
-
-                <div class="col-sm-6">
-                    <button mat-raised-button color="primary" (click)="login()">Entrar com minha conta</button>
-                </div>
-                <div class="col-sm-6" style="margin-top: 20px;">
-                    <button mat-raised-button color="primary" (click)="recSenha()">Esqueci minha senha</button>
-                </div>
-            </div>
-        </div>
 
 
     </div>
+
 </div>
