--- a/src/app/inicio/home/home.component.css
+++ b/src/app/inicio/home/home.component.css
@@ -1,46 +1,76 @@
-.c {
+.a {
     height: 100vh;
-    background-image: linear-gradient(to right, #673AB7, #35008f);
-    display: grid;
-    text-align: center;
-    align-items: center;
-    align-content: center;
-    color: white;
+    background: #ffc107;
 }
 
-.c2 {
-    display: grid;
-    align-items: center;
-    align-content: center;
-}
-
-.bo {
-    margin: auto;
-}
-
-.botao-delsuc {
-    background-color: gold;
-    text-align: center;
-    padding: 10px;
-    border-radius: 7px;
-    color: #673ab7;
-    font-weight: 500;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-}
-
-.yu {
-    text-decoration: none;
+.b {
+    height: 60px;
+    display: flex;
+    padding-top: 10px;
+    justify-content: flex-end;
+    padding-right: 10px;
+    gap: 50px;
 }
 
 .logo {
-    width: 100px;
-    height: 100px;
-    border-radius: 159px;
+    text-align: center;
+    margin-top: 50px;
+    margin-bottom: 20px;
 }
 
-.guin {
-    text-align: -webkit-center;
-    align-content: center;
+.d {
+    font-size: 35px;
+    text-align: center;
+    font-weight: 600;
+    color: white;
+}
+
+.e {
+    font-size: 20px;
+    text-align: center;
+    color: white;
+}
+
+.input {
+    background: beige;
+    height: 60px;
+    display: grid;
     align-items: center;
-    justify-content: center;
+    width: 100%;
+    border: 1px solid #edecec;
+    border-radius: 6px;
+    padding-left: 10px;
+    color: #868585;
+    grid-template-columns: 0fr 1fr;
+    gap: 20px;
+    font-size: 18px;
+    /* -webkit-box-shadow: 9px 7px 5px rgba(50, 50, 50, 0.77); */
+    -moz-box-shadow: 9px 7px 5px rgba(50, 50, 50, 0.77);
+    box-shadow: 0px 1px 7px rgb(0 0 0 / 19%);
+}
+
+.btSearh {
+    background: #dc2e21;
+    height: 60px;
+    font-size: 16px;
+    font-weight: 600;
+    color: white;
+    display: grid;
+    align-items: center;
+    text-align: center;
+    width: 160px;
+    border-radius: 5px;
+}
+
+.f {
+    display: grid;
+    justify-items: center;
+}
+
+.g {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    width: 60%;
+    margin-top: 40px;
 }
