Sistema faltando apenas as funcoes de mult lojas

--- a/src/app/inicio/bag/bag.component.html
+++ b/src/app/inicio/bag/bag.component.html
@@ -13,8 +13,8 @@
     font-size: 13px;
     color: #61615f;
     padding-top: 75px;">
-        <div class="img_bag" [lazyLoad]="'./assets/images/others/bag.png'"></div>
-        <div class="c1">Sua sacola está vazia </div>
+        <div class="img_bag" [lazyLoad]="'./assets/images/others/bag2.png'"></div>
+        <div class="c1">Sua carrinho está vazio </div>
         <div>Adicione itens</div>
     </div>
 
