--- a/src/app/inicio/home/home.component.html
+++ b/src/app/inicio/home/home.component.html
@@ -1,7 +1,7 @@
 <div class="a">
     <div class="b">
         <button mat-button>Vulto Empresas</button>
-        <button mat-stroked-button style="color: white;">Entrar</button>
+        <button mat-stroked-button routerLink="/entrar">Entrar</button>
     </div>
 
     <div class="c">
@@ -9,9 +9,9 @@
             <img style="width: 183px;" src="./assets/images/others/logo.png" alt="" srcset="">
         </div>
         <div class="d">
-            Nunca foi tão fácil pedir comida saudável
+            Nunca foi tão fácil pedir delivery
         </div>
-        <div class="e">Descubra restaurantes e mercados perto de você</div>
+        <div class="e">Descubra as lojas próximo a você ;)</div>
 
 
         <div class="f">
@@ -20,7 +20,7 @@
                     <mat-icon>search</mat-icon>
                     Buscar endereço
                 </div>
-                <div class="btSearh" (click)="seleionarEndereco()">
+                <div class="btSearh modoDESK" (click)="seleionarEndereco()">
                     Buscar
                 </div>
 
