--- a/src/app/inicio/user-registration/input-user-data/input-user-data.component.css
+++ b/src/app/inicio/user-registration/input-user-data/input-user-data.component.css
@@ -38,3 +38,10 @@
 .guinho {
     margin-top: 20px;
 }
+
+@media(max-width: 600px) {
+    .modoCELL1 {
+        border: none;
+        box-shadow: none;
+    }
+}
