--- a/src/app/inicio/user-registration/input-user-data/input-user-data.component.html
+++ b/src/app/inicio/user-registration/input-user-data/input-user-data.component.html
@@ -1,4 +1,4 @@
-<mat-card class="carda">
+<mat-card class="carda modoCELL1">
     <div class="g2">
         <button mat-icon-button color="primary" routerLink="">
       <mat-icon>keyboard_arrow_left</mat-icon>
