--- a/src/app/inicio/itens-merchant/itens-merchant.component.html
+++ b/src/app/inicio/itens-merchant/itens-merchant.component.html
@@ -1,4 +1,5 @@
-<div class="col-sm-12 mp0R bMobile" *ngIf="service.getStatusLoaderStore()">
+<div class="col-sm-12 mp0R bMobile">
+    <!--*ngIf="service.getStatusLoaderStore()" -->
     <div class="col-sm-12 mp0L bMobile" style="padding-right: 0px;">
 
         <div *ngIf="service.getDadosEmpresa().capa" class="col-sm-12 mp0L bMobile hiddenEl" style="padding-right: 0px;">
@@ -13,18 +14,23 @@
 
         <div class="c1 col-sm-12 mp0L dad">
             <div>
+                <ngx-skeleton-loader animation="true" *ngIf="!service.getDadosEmpresa().nome"></ngx-skeleton-loader>
                 {{ service.getDadosEmpresa().nome }}
             </div>
 
             <div class="col-sm-12 mp0L dad astr" style="font-size: 13px;">
-                <mat-icon class="cor1">star</mat-icon><span class="cor1"> {{ service.getDadosEmpresa().nota.nota }}
-        </span> <span class="hiddenEl" style="color: rgb(105, 105, 105);">
-          ({{ service.getDadosEmpresa().nota.totalavals }} Avaliações)</span>
+                <ngx-skeleton-loader animation="true" *ngIf="!service.getDadosEmpresa().nome"></ngx-skeleton-loader>
+                <mat-icon class="cor1" *ngIf="service.getDadosEmpresa().nome">star</mat-icon><span class="cor1">
+          {{ service.getDadosEmpresa().nota.nota }}
+        </span> <span class="hiddenEl" style="color: rgb(105, 105, 105);" *ngIf="service.getDadosEmpresa().nome">
+          ({{ service.getDadosEmpresa().nota.totalavals }} Avaliações)
+        </span>
             </div>
 
         </div>
 
         <div class="c2 col-sm-12 mp0L dad">
+            <ngx-skeleton-loader animation="true" *ngIf="!service.getDadosEmpresa().nome"></ngx-skeleton-loader>
             {{ service.getDadosEmpresa().descricao }}
         </div>
 
@@ -66,15 +72,26 @@
                     <div> {{service.getDadosEmpresa().nome}} </div>
                 </div>
                 <div class="caixa-cats-catalogo" id="caixa-cats-catalogo">
-                    <div [class.itemSele]="item.selecionado" class="caixa-cats-catalogo-item" *ngFor="let item of service.getDadosEmpresa().categorias" (click)="clickMenuCat(item)"> {{ item.nome }} </div>
+                    <div [class.itemSele]="item.selecionado" class="caixa-cats-catalogo-item" *ngFor="let item of service.getDadosEmpresa().categorias" (click)="clickMenuCat(item)"> {{ item.nome }}
+                    </div>
                 </div>
             </div>
 
-            <mat-form-field class="infiltroi filtromobile" color="primary">
+            <!--<mat-form-field class="infiltroi filtromobile" color="primary">
                 <mat-label> Buscar no catálogo </mat-label>
                 <input matInput placeholder="Digite aqui o nome item" #filterProduct>
                 <mat-icon matSuffix style="color: grey;">search</mat-icon>
-            </mat-form-field>
+            </mat-form-field>-->
+            <span class="filtromobile" [formGroup]="formProd">
+               <div class="pindow" style="margin-top: 1px;">
+                <div style="margin-left: 15px;display: flex;">
+                    <mat-icon style="color: rgb(230, 24, 24);" class="mat-18">search</mat-icon>
+                </div>
+                <input formControlName="filtro" class="iseff" placeholder="Buscar no catálogo" #filterProduct>
+            </div>
+            </span>
+
+
         </div>
 
 
@@ -82,7 +99,14 @@
         <div class="col-sm-12 cata">
             <div class="row">
                 <div class="col-sm-12 row picks">
-                    <div class="col-sm-6">
+
+                    <div class="guinhorico">
+                        <mat-icon style="color: red;" class="mat-18">search</mat-icon>
+                        <div [formGroup]="formProd">
+                            <input formControlName="filtro" class="stylein" type="name" placeholder="Buscar no catálogo">
+                        </div>
+                    </div>
+                    <!--<div class="col-sm-6" style="display: block;">
                         <mat-form-field [formGroup]="catalogoFilter" style="width:100%; margin-top: 4px;">
                             <mat-label>Filtrar catálogo</mat-label>
                             <mat-select formControlName="filtro">
@@ -94,9 +118,9 @@
                                 </mat-option>
                             </mat-select>
                         </mat-form-field>
-                    </div>
+                    </div>-->
 
-                    <div class="col-sm-6 searchprodmob">
+                    <!--<div class="col-sm-6 searchprodmob">
                         <div class="col-sm-12 c5 item2faz" id="item2fix">
 
                             <mat-form-field class="infiltroi" color="primary">
@@ -106,7 +130,7 @@
                             </mat-form-field>
 
                         </div>
-                    </div>
+                    </div>-->
                 </div>
 
             </div>
@@ -118,20 +142,31 @@
 
     <!--Produtos para descktop-->
     <div class="row mp0R bMobile hiddenEl">
-        <div class="col-sm-12 mp0R" *ngFor="let item of service.getDadosEmpresa().categorias | name:catalogoFilter.value.filtro">
+        <ngx-skeleton-loader animation="true" *ngIf="!service.getDadosEmpresa().nome"></ngx-skeleton-loader>
+        <div class="col-sm-12 mp0R" *ngFor="let item of service.getDadosEmpresa().categorias">
+            <!-- | name:catalogoFilter.value.filtro -->
             <div class="aicn col-sm-12"> {{ item.nome }} </div>
             <div class="row mp0R">
-                <div style="padding: 10px;" class="col-sm-6 " *ngFor="let product of item.itens | filterId:filterProduct2.value">
+                <div style="padding: 10px;" class="col-sm-6 " *ngFor="let product of item.itens | filterId:formProd.controls.filtro.value">
                     <a href="javascript:;" style="text-decoration: none;">
                         <div class="item col-sm-12" (click)="openItem(product)">
                             <div class="row">
 
 
                                 <div class="col-sm-7">
-                                    <div class="item-01"> {{ product.nome | slice:0:40}} </div>
-                                    <div class="item-02"> {{ product.descricao }} </div>
+                                    <div class="item-01">
+                                        <ngx-skeleton-loader animation="true" *ngIf="!product.nome"></ngx-skeleton-loader>
+                                        {{ product.nome | slice:0:40}}
+                                    </div>
+                                    <div class="item-02">
+                                        <ngx-skeleton-loader animation="true" *ngIf="!product.nome"></ngx-skeleton-loader>
+                                        {{ product.descricao }}
+                                    </div>
                                     <div class="item-03">
-                                        <div> {{ product.preco | currency:'BRL':true }}</div>
+                                        <div>
+                                            <ngx-skeleton-loader animation="true" *ngIf="!product.nome"></ngx-skeleton-loader>
+                                            {{ product.preco | currency:'BRL':true }}
+                                        </div>
                                         <div>
                                             <div class="item033ind" *ngIf="product.esgotado || product.esconder">
                                                 <mat-icon>info</mat-icon> Indisponível
@@ -141,7 +176,7 @@
                                 </div>
 
                                 <div class="col-sm-5">
-                                    <div class="item-bg-img" [class.product_unavailable]="product.esgotado || product.esconder" [lazyLoad]="product.imagem"></div>
+                                    <div class="item-bg-img" [class.product_unavailable]="product.esgotado || product.esconder" [defaultImage]="service.defaultImage" [lazyLoad]="product.imagem"></div>
                                 </div>
 
                             </div>
@@ -160,25 +195,33 @@
     </div>
 
     <!--produtos para mobile-->
+
     <div *ngFor="let item of service.getDadosEmpresa().categorias | name:catalogoFilter.value.filtro" class="elementMobileShow">
-        <div class="stycatItem"> {{ item.nome }} </div>
+        <div class="stycatItem">
+            {{ item.nome }}
+        </div>
 
         <div class="itemProduct" *ngFor="let product of item.itens | filterId:filterProduct.value" (click)="openItem(product)">
             <div class="adate-ite">
                 <div class="idescpod">
-                    <div class="inameprod"> {{ product.nome | slice:0:26}} </div>
+                    <div class="inameprod"> {{ product.nome | slice:0:26}}
+                        <ngx-skeleton-loader animation="true" *ngIf="!service.getDadosEmpresa().nome"></ngx-skeleton-loader>
+                    </div>
                     <div class="idescrod">
+                        <ngx-skeleton-loader animation="true" *ngIf="!service.getDadosEmpresa().nome"></ngx-skeleton-loader>
                         {{ product.descricao | slice:0:160 }}
                         <div class="item033ind" *ngIf="product.esgotado || product.esconder">
                             <mat-icon>info</mat-icon> Indisponível
+                            <ngx-skeleton-loader animation="true" *ngIf="!service.getDadosEmpresa().nome"></ngx-skeleton-loader>
                         </div>
                     </div>
                 </div>
-                <div class="iimgpod" [class.product_unavailable]="product.esgotado || product.esconder" [lazyLoad]="product.imagem"> </div>
+                <div class="iimgpod" [class.product_unavailable]="product.esgotado || product.esconder" [defaultImage]="service.defaultImage" [lazyLoad]="product.imagem"> </div>
             </div>
 
-            <div class="ipriceprod"> {{ product.preco | currency:'BRL':true }}
-
+            <div class="ipriceprod">
+                {{ product.preco | currency:'BRL':true }}
+                <ngx-skeleton-loader animation="true" *ngIf="!service.getDadosEmpresa().nome"></ngx-skeleton-loader>
             </div>
             <div class="lineitea"></div>
         </div>
