--- a/src/app/inicio/user-registration/input-emailortel/input-emailortel.component.css
+++ b/src/app/inicio/user-registration/input-emailortel/input-emailortel.component.css
@@ -30,3 +30,10 @@
     width: 100%;
     margin-top: 18px;
 }
+
+@media(max-width: 600px) {
+    .modoCELL1 {
+        border: none;
+        box-shadow: none;
+    }
+}
