--- a/src/app/multLojas/entrar/entrar.component.html
+++ b/src/app/multLojas/entrar/entrar.component.html
@@ -1,6 +1,6 @@
-<div class="logo" [lazyLoad]="'./assets/images/others/logo.png'"></div>
+<div class="logo"></div>
 
-<div class="a" lazyLoad="./assets/images/others/bg1.png">
+<div class="a">
     <div class="b">
         <div class="sdasd">
             <button mat-icon-button color="warn" routerLink="/lojas">
@@ -13,7 +13,7 @@
         <div class="c">
             <div> <input class="in" placeholder="Email ou telefone" type="email" name="" id=""> </div>
             <div> <input class="in" placeholder="Digite sua senha" type="password" name="" id=""> </div>
-            <div class="gabiel"> <a href="javascript:;">Esqueceu sua senha:</a> </div>
+            <div class="gabiel"> <a href="javascript:;" routerLink="/recuperar-cadastro">Esqueceu sua senha</a> </div>
             <div style="margin-top: 20px;">
                 <button style="width: 100%;" mat-raised-button color="warn">Entrar</button>
             </div>
@@ -21,7 +21,7 @@
 
 
         <div style="margin-top: 20px;">
-            <button mat-button color="warn"> Cadastre-se </button>
+            <button mat-button color="warn" routerLink="/registration"> Cadastre-se </button>
         </div>
     </div>
 </div>
